[add] adding header

--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -25,6 +25,7 @@
   {{ with $script.js }}
     <script src="{{ relURL . }}"></script>
   {{ end }}
+  <script src="https://unpkg.com/ionicons@4.4.4/dist/ionicons.js"></script>
 </body>
 
 </html>
