--- a/src/css/imports/_base.scss
+++ b/src/css/imports/_base.scss
@@ -1,15 +1,8 @@
-/*
-  You can use import statements to include partials:
- */
-@import 'imports/reset.css';
-
-/*
-  Or add your statements here:
- */
 body {
   font-size: calc(10px + 1vmin);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -20,6 +13,7 @@ body {
   text-align: center;
   background-color: #282c34;
   color: white;
+  border-top: 3px solid $base-color;
 }
 
 a {
