[add] adding footer and fixing header

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <nav class="navbar navbar-expand-sm justify-content-end">
+<nav class="navbar navbar-expand-sm justify-content-end">
+    <div class="container">
         <a class="navbar-brand mr-auto" href="{{ .Site.BaseURL }}">
             <ion-icon name="home"></ion-icon>
         </a>
@@ -12,7 +12,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-            <span class="navbar-toggler-icon"></span>
+            <ion-icon name="menu"></ion-icon>
         </button>
         <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -25,5 +25,5 @@
                 {{ end }}
             </ul>
         </div>
-    </nav>
-</div>
+    </div>
+</nav>
