--- a/src/css/imports/_base.scss
+++ b/src/css/imports/_base.scss
@@ -1,23 +1,30 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
-  font-size: calc(10px + 1vmin);
+  font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   text-align: center;
-  background-color: #282c34;
-  color: white;
-  border-top: 3px solid $base-color;
+
+
+  border-top: $page-border;
+  display:flex; 
+  flex-direction:column; 
+}
+
+footer {
+  margin-top:auto;
+  border-bottom: $page-border;
 }
 
 a {
-  color: pink;
+  color: $base-color;
   text-decoration: none;
 }
 
