Updating home page

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,5 +9,9 @@
 
 
 @import 'imports/variables';
+@import 'abstracts/functions';
 @import 'imports/base';
 @import 'imports/nav';
+@import 'components/social';
+@import 'pages/home';
+
