--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,9 +1,29 @@
 {{ define "main" }}
 
-<h1>Hugo with Webpack, Sass, and PostCSS</h1>
-
-<h3>Hooray 🎉 - you've built this with <a href="https://github.com/netlify/victor-hugo">Victor-Hugo</a>!</h3>
-
-<a href="{{ "/tech" | relURL }}">Check out the tech</a>
+<section id="about">
+  <div class="container">
+    <div class="avatar">
+      <img
+        class="img-circle"
+        src="{{ .Site.BaseURL }}{{ .Site.Params.avatar }}"
+        alt="Gabriel Araujo"
+      />
+    </div>
+    <h1>
+      I'm <strong>{{ .Site.Params.author }}</strong
+      >, a Web Developer.
+    </h1>
+    <h1>I'm always curious and I love learn new things.</h1>
+    <h1>Pythonist, Javascript enthusiast and hobbyist maker.</h1>
+    <h1>
+      Contact me at
+      <a href="http://twitter.com/{{ .Site.Params.Social.Twitter }}"
+        >@{{ .Site.Params.Social.Twitter }}</a
+      >
+      or by <a href="mailto:{{ .Site.Params.Social.Email }}">email</a>.
+    </h1>
+    {{ partial "social.html" . }}
+  </div>
+</section>
 
 {{ end }}
