--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,6 +3,7 @@
 @import "~bootstrap/scss/mixins";
 @import '~bootstrap/scss/nav';
 @import '~bootstrap/scss/navbar';
+@import '~bootstrap/scss/card';
 @import '~bootstrap/scss/transitions';
 @import '~bootstrap/scss/bootstrap-grid';
 @import '~bootstrap/scss/bootstrap-reboot';
