Adjustments for blog posts
- changed theme colors
- imported an archive post from medium
- fixed some layouts

--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }} {{ $section := .Site.GetPage "section" .Section }}
-<article class="content">
+<article class="content container">
   <main>{{- .Content -}}</main>
 </article>
 {{ end }}
