--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <section id="about">
-  <div class="container">
+  <div class="container text-center">
     <div class="avatar">
       <img
         class="img-circle"
