--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -1,25 +1,29 @@
 {{ define "main" }}
 <section id="section-wrap">
   <div class="container">
-    <h3>Archive</h3>
-    <div class="card">
+    <h1>Archive</h1>
+    <article class="card">
       <div class="card-body">
-      {{ range .Data.Pages.ByPublishDate.Reverse }}
+        {{ range.Data.Pages.ByPublishDate.Reverse }}
         <div class="row">
           <div class="col-sm-4 col-md-4 col-lg-4">
-            <h5 style="text-align: right">
+            <h4 class="text-right">
               {{ .Date.Format "January 2, 2006" }}
-            </h5>
-            </div>
-            <div class="col-sm-8 col-md-8 col-lg-8">
-              <h5 style="text-align: left">
-              <strong><a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a></strong>
-            </h5>
+            </h4>
+          </div>
+          <div class="col-sm-8 col-md-8 col-lg-8">
+            <h3 class="text-left">
+              <strong>
+                <a href="{{ .RelPermalink }}">
+                  {{ .Title | markdownify }}
+                </a>
+              </strong>
+            </h3>
           </div>
         </div>
-      {{ end }}
+        {{ end }}
       </div>
-    </div>
+    </article>
   </div>
 </section>
 {{ end }}
