--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="container">
-        <p class="text-muted">
+        <p class="text-muted text-center">
         &copy; All rights reserved. Powered by
         <a href="https://github.com/netlify-templates/victor-hugo">Victor Hugo</a> with
         ♥
