--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,14 +5,15 @@
 @import '~bootstrap/scss/navbar';
 @import '~bootstrap/scss/card';
 @import '~bootstrap/scss/transitions';
+@import '~bootstrap/scss/utilities/text';
 @import '~bootstrap/scss/bootstrap-grid';
 @import '~bootstrap/scss/bootstrap-reboot';
 
 
-@import 'imports/variables';
+@import 'abstracts/variables';
 @import 'abstracts/functions';
-@import 'imports/base';
-@import 'imports/nav';
+@import 'base/typography';
+@import 'components/nav';
 @import 'components/social';
 @import 'pages/home';
-
+@import 'themes/theme';
