--- a/src/css/themes/_theme.scss
+++ b/src/css/themes/_theme.scss
@@ -1,31 +1,31 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
 }
 
 body {
   font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-
-
   border-top: $page-border;
-  display:flex; 
-  flex-direction:column; 
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
-  margin-top:auto;
+  margin-top: auto;
   border-bottom: $page-border;
 }
 
 a {
-  color: $base-color;
+  color: $base-light;
   text-decoration: none;
+
+  &:hover {
+    color: $base-dark;
+  }
 }
 
 .content {
